invalid input fix , table display fix, data fix

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IMC - calculator</title>
+  <title>IMC - calculadora</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
   <!-- font awesome icons -->
@@ -129,7 +129,7 @@
             <p>PESO</p>
           </div>
           <!-- single row -->
-          <div class="table-row" data-id="1">
+          <div class="table-row" data-id="2">
             <p>Magreza</p>
             <p>&lt; 18.5</p>
             <p></p>
@@ -148,7 +148,7 @@
           </div>
 
           <!-- single row -->
-          <div class="table-row" data-id="6">
+          <div class="table-row" data-id="5">
             <p>Obesidade</p>
             <p>&gt; 30</p>
             <p></p>
