changes - browsers inconsistencies in  appearence

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IMC - calculadora</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <title>IMC - calculator</title>
   <link rel="stylesheet" href="styles.css">
   <!-- font awesome icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -77,8 +76,8 @@
 
         <!-- buttons -->
         <button class="btn-submit" type="submit" id="btn-submit">Calcular</button>
-        <button class="btn-info" type="text">Saiba mais</button>
       </form>
+      <button class="btn-info" type="text">Saiba mais</button>
       <!-- end of Form -->
 
     </article>
